--- a/public/assets/css/Style.css
+++ b/public/assets/css/Style.css
@@ -152,3 +152,15 @@ button.dropdown-toggle:focus{
     width: 100%;
     padding: 10px;
 }
+.timezone-dropdown .dropdown-menu.show {
+    height: 150px;
+    overflow-y: scroll;
+}
+
+.form-control::placeholder {
+    color: #a9a9a9!important;
+}
+  
+  
+  
+  
