--- a/public/assets/css/Style.css
+++ b/public/assets/css/Style.css
@@ -175,3 +175,16 @@ button.dropdown-toggle:focus {
 #RadioCol .form-check-input {
 border: 1px solid #000;
 }
+
+
+.RoleName {
+  padding: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.react-calendar {
+  border: 1px solid #dddddd!important;
+  border-radius: 10px;
+  padding: 1rem;
+}
