--- a/public/assets/css/Style.css
+++ b/public/assets/css/Style.css
@@ -29,7 +29,7 @@
   background: #fff;
   border-radius: 10px;
   margin: 10px 0px;
-  border: 1px solid #f7f8f9;
+  border: 1px solid #e6e6e6;
 }
 
 .table > :not(caption) > * > * {
@@ -54,9 +54,9 @@ table.table th {
 }
 
 .page-link {
-  padding: 8px 15px !important;
+  padding: 5px 14px !important;
   color: #858d9d !important;
-  border: 0px solid #000 !important;
+  border: 1px solid #e6e6e6 !important;
   border-radius: 10px;
 }
 
@@ -187,4 +187,18 @@ border: 1px solid #000;
   border: 1px solid #dddddd!important;
   border-radius: 10px;
   padding: 1rem;
+}
+
+.CreateAccountForm {
+  border: 1px solid #f1f1f1;
+  border-radius: 10px;
+  padding: 1.5rem;
+}
+
+a.page-link.currentPage {
+  background: #00285d;
+  color: #fff !important;
+}
+.table-responsive {
+  scrollbar-width: thin;
 }
