--- a/public/assets/css/Style.css
+++ b/public/assets/css/Style.css
@@ -47,12 +47,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 table.table th {
- 
-  
-    position: sticky;
-    top: 0;
-    z-index: 10; /* Ensure the header is above the scrolling content */
-  font-weight: bold; /* font-weight: 400; */
+  /* font-weight: 400; */
+  font-weight: bold;
   font-size: 15px;
   color: black;
   text-transform: uppercase;
@@ -384,7 +380,4 @@ th {
 }
 .bg-lightdanger{
  background-color:#f08d8d;
-}
-.unavailable-staff-box{
-  
 }
